2004-04-07  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Terrain.h, Mercator/Terrain.cpp: Fixes to be compatible
	  with other compilers.

	* Mercator/Segment.cpp: Fix seem normals, and avoid using variable
	  size local arrays, and handle systems with no rint.

	* Mercator/Forest.cpp, Mercator/DepthShader.cpp: Handle systems with
	  no rint.

2004-03-19  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/GrassShader.cpp: Fix uninitialised 0,0 corner tile
	  in grass shader.

2004-02-22  Damien McGinnes <mcginnes at netspeed dot com.au>

	* README: minor mods, added Vegetation section

2004-02-07  Damien McGinnes <mcginnes at netspeed dot com.au>

	* Mercator/Forest.cpp: fixed 'bbox to polygon' calc;
	  also test inside polygon during populate.

2004-02-06  Al Riddoch  <alriddoch@zepler.org>

	* tests/testForest.cpp: Update tests to use new accessors
	  for forest area.

2004-02-06  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.h, Mercator/Forest.cpp: Modify accessors
	  so area of a forest is stored as Polygon instead of a
	  box.

2004-02-03  Damien McGinnes <mcginnes at netspeed dot com.au>

	* Mercator/RandCache.h: make RandCache store uint32 rather than
	  double. Should halve memory usage.

2004-01-24  Damien McGinnes <mcginnes at netspeed dot com.au>

	* Mercator/Forest.h, Mercator/Forest.cpp: make forest use
	  RandCache.

2004-01-24  Damien McGinnes <mcginnes at netspeed dot com.au>

	* Mercator/RandCache.h: add code to provide a pool of repeatable
	  (2d indexed) random numbers for use by Forest etc.
	  thanks to rsteinke.

2004-01-20  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp: Use WFMath's value of PI, as windows
	  does not include it in math.h.

2004-01-17  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp: Revert changes to rng seeding as the
	  behavoir broke some of the key repeatability features required.
	  Add comments explaining what the valued properties of the
	  algorithm are.
